# rust-unidecode

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build_manylinux_wheels.sh  setup.cfg  test_speed.py
.github/workflows/: ci_install-pkg.yml  ci_python-test.yml  ci_test.yml  release-pypi.yml
requirements/: test.txt
src/: ascii_data.rs  lib.rs
tests/: test_unidecode.py  unidecode.rs
