[package]
name = "fast_unidecode"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Stancl <daniek.stancl@gmail.com>", "Amit Chowdhury <amitc97@gmail.com>"]
description = "Provides pure ASCII transliterations of Unicode strings."
repository = "https://github.com/stancld/rust-unidecode/"
readme = "README.md"
keywords = [
  "unidecode",
  "unidecoder",
  "Unicode",
  "ASCII",
  "transliteration"
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10"
]
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fast_unidecode"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.16.5"
features = ["extension-module"]
